--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qiniu": "^7.14.0",
     "qiniu-js": "4.0.0-beta.6",
     "tinify": "^1.7.1",
+    "utools-api-types": "^6.0.0",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
   },
